[gd_scene load_steps=4 format=3 uid="uid://cn8ttfxio3dg1"]

[ext_resource type="Script" uid="uid://d32e2m787nfuq" path="res://senes/start_menu/start_menu.gd" id="1_7i8dg"]
[ext_resource type="Script" uid="uid://d3dvqiwlwf7mh" path="res://senes/start_menu/loading.gd" id="2_tx8wk"]

[sub_resource type="LabelSettings" id="LabelSettings_7i8dg"]
font_size = 25

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_7i8dg")

[node name="Loading" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_tx8wk")

[node name="VBoxContainer" type="VBoxContainer" parent="Loading"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = 400.0
offset_right = 300.0
offset_bottom = -126.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Loading/VBoxContainer"]
layout_mode = 2
text = "dwadawdaa"
label_settings = SubResource("LabelSettings_7i8dg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Loading/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2

[node name="CheckFiles" type="HTTPRequest" parent="."]
use_threads = true
timeout = 5.0

[node name="DownloadFile" type="HTTPRequest" parent="."]
use_threads = true

[connection signal="request_completed" from="CheckFiles" to="." method="_on_check_files_request_completed"]
[connection signal="request_completed" from="DownloadFile" to="." method="_on_download_file_request_completed"]
